# tgcurl

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  AUTHORS  CLAUDE.md  CMakeLists.txt  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  nfpm.yaml
src/: auth.cpp  auth.h  config.cpp  config.h  error.h  json_in.cpp  json_in.h  json_out.h  main.cpp  mcp.cpp  mcp.h  message_render.h  resolve.cpp  resolve.h  send_confirm.h  session.cpp  session.h  td_placeholder.cpp  tdclient.cpp  tdclient.h  tgcurl_version.cpp  tgcurl_version.h
src/commands/: auth_cmds.cpp  chat.cpp  chats.cpp  contacts.cpp  download.cpp  media_args.h  read.cpp  registry.cpp  registry.h  search.cpp  send.cpp  send_common.cpp  send_common.h  sendchecklist.cpp  sendfile.cpp  sendgif.cpp  sendlocation.cpp  sendphoto.cpp  sendpoll.cpp
tests/: CMakeLists.txt  cli_checks.cmake  test_auth.cpp  test_config.cpp  test_json_in.cpp  test_json_out.cpp  test_message_render.cpp  test_registry.cpp  test_resolve.cpp  test_send_args.cpp  test_send_confirm.cpp  test_tdclient.cpp  test_util.h
